[package]
name = "oib"
version = "0.3.0"
edition = "2021"
authors = ["Xuanjun Wen <wenxuanjun@yahoo.com>"]
description = "A simple GPT+FAT image builder"
keywords = ["gpt", "fat", "image"]
license = "MIT"
homepage = "https://github.com/wenxuanjun/oib"
repository = "https://github.com/wenxuanjun/oib"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
argh = "0.1.13"
anyhow = "1.0.98"
tempfile = "3.19.1"
gpt = "4.1.0"
toml = "0.8.20"
walkdir = "2.5.0"
path-slash = "0.2.1"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.fatfs]
version = "0.3.6"
default-features = false
features = ["std", "alloc"]
